# geeks-life

./: .browserslistrc  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .pnp.cjs  .travis.yml  .yarnrc  .yarnrc.yml  README.md  babel.config.js  index.html  nodemon.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.typecheck.json  vite.config.ts  vitest.config.ts  vitest.setup.ts  webpack.main.config.js  webpack.renderer.config.js
.github/workflows/: cd.yml  ci-pr.yml  ci.yml  release.yml
.husky/: post-pull  pre-push
scripts/: build-main.js  check-peer-deps.sh  fetch_emoji_resources.mjs  package.ts  release.ts  tsconfig.json  util.ts
src/: App.tsx  colors.ts  global.css  main.tsx  package.json  queryClient.ts  styles.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/resources/emoji/github/: data.json
src-tauri/src/: app_state.rs  commands.rs  emojis.rs  global_shortcuts.rs  main.rs  tray.rs  window.rs  windows.rs  workspace.rs
src-tauri/src/application/: application.rs  command_handler.rs  daily_life_snapshot.rs  load_aggregate.rs  mod.rs  queries.rs  snapshot_metadata.rs
src-tauri/src/domain/: daily_life.rs  daily_log.rs  mod.rs  score.rs
src-tauri/src/patches/: macos_titlebar.rs  mod.rs  titlebar.rs
src-tauri/src/utils/: frontmatter.rs  mod.rs
src-tauri/testing/: Cargo.toml
src-tauri/testing/src/: lib.rs  temp_dir.rs
src/assets/: native-emojis.json
src/components/: index.ts
src/components/Accelerator/: index.test.tsx  index.tsx
src/components/ButtonToggle/: index.tsx
src/components/DailyLifeCalendar/: Day.tsx  Week.tsx  index.tsx
src/components/DailyLifeEditor/: index.tsx
src/components/DailyLifeViewToggle/: index.test.tsx  index.tsx
src/components/ScoreSelect/: Item.tsx  index.tsx
src/components/Select/: index.tsx
src/components/Switch/: index.test.tsx  index.tsx
src/components/Titlebar/: index.test.tsx  (+1 more)
src/core/: calendar.ts  date.ts  index.ts  ipc.ts  process.ts  sorting.ts  tsconfig.json  typings.ts
src/hooks/: index.ts  useDailyLife.ts  useDailyLifeViewState.test.ts  useDailyLifeViewState.test.tsx  useDailyLifeViewState.ts  useDailyLifes.test.tsx  useDailyLifes.ts  usePlatform.ts  usePreservedCallback.ts  useSelectedDateState.test.ts  useSelectedDateState.ts  useStoreState.test.ts  useStoreState.ts
src/main/: constants.ts  emoji-manager.ts  env.ts  git.ts  index.ts  storage.ts  tsconfig.json  tsconfig.main.json  util.ts  window.ts
src/models/: DailyLife.test.ts  DailyLife.ts  DailyLifeCommand.ts  DailyLifeView.ts  DailyLog.ts  Score.ts  index.ts
src/remotes/: executeDailyLifeCommand.ts  getDailyLife.ts  getDailyLifes.ts  index.ts  resizeWindow.ts
src/renderer/: .eslintrc.js  App.tsx  css.ts  electron-features.ts  global-types.ts  index.html  index.scss  next.config.js  preload.ts  tsconfig.json  tsconfig.renderer.json
src/utils/: calendar.test.ts  calendar.ts  detectDarkMode.ts  noop.ts  range.test.ts
(+77 files in other folders)
