[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.24"
tauri = { version = "1.0.0", features = ["global-shortcut", "os-all", "system-tray", "window-start-dragging"] }
git2 = "0.14.4"
thiserror = "1.0.31"
chrono = "0.4.19"
tokio = { version = "1.18.2", features = ["full"] }
async-trait = "0.1.53"
regex = "1.5.5"
walkdir = "2.3.2"
url = "2.2.2"

geeks_git = "0.2.0"
geeks_event_sourcing = "0.3.1"
geeks_event_sourcing_git = "0.7.0"

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/tauri-plugin-store"
branch = "dev"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"

[dev-dependencies]
testing = { path = "./testing" }
geeks_git_testing = "0.2.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = ["testing"]
